manifests/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: raspberry-pi
  labels:
    app: temperature
spec:
  clusterIP: None
  ports:
  - port: 30000
    targetPort: 30000
    protocol: TCP
    name: web
---
# Because this service has no selector, the corresponding Endpoints
# object will not be created. You can manually map the service to
# your own specific endpoints:
kind: Endpoints
apiVersion: v1
metadata:
  name: raspberry-pi
  labels:
    app: temperature
subsets:
  - addresses:
      - ip: "67.180.194.6"
    ports:
      - port: 30000
