manifests/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: temperature
  labels:
    app: grafana
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: web
  selector:
    app: grafana

---

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: grafana-ingress
  namespace: temperature
  annotations:
    kubernetes.io/ingress.class: tectonic
    kubernetes.io/tls-acme: true
spec:
  tls:
    - hosts:
        - temperature.robszumski.com
      secretName: temperature-tls
  rules:
    - host: temperature.robszumski.com
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000

---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: temperature
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:4.5.2
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/grafana-storage
        ports:
        - name: web
          containerPort: 3000
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 200Mi
            cpu: 200m
      - name: grafana-watcher
        image: quay.io/coreos/grafana-watcher:v0.0.8
        args:
          - '--watch-dir=/var/grafana-dashboards-0'
          - '--grafana-url=http://localhost:3000'
        resources:
          requests:
            memory: "16Mi"
            cpu: "50m"
          limits:
            memory: "32Mi"
            cpu: "100m"
        volumeMounts:
        - name: grafana-dashboards-0
          mountPath: /var/grafana-dashboards-0
      volumes:
      - name: grafana-storage
        emptyDir: {}
      - name: grafana-dashboards-0
        configMap:
          name: grafana-dashboards-0
